// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-columns-field Renders \`c-columns-field\` with custom props correctly 1`] = `
<div
  class="layout column"
>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="0"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="1"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="2"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="3"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="4"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <div
    class="my-2 py-2 px-3 v-card v-sheet theme--light"
  >
    <column-field-stub
      column="[object Object]"
      name="5"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </div>
  <button
    class="ml-0 v-btn theme--light primary"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      Add
    </div>
  </button>
</div>
`;

exports[`c-columns-field Renders \`c-columns-field\` with default props 1`] = `
<div
  class="layout column"
>
  <button
    class="ml-0 v-btn theme--light primary"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      Add
    </div>
  </button>
</div>
`;
